# rubisco

./: .gitattributes  .gitignore  .pylintrc  ChangeLog  FILELIST  README.md  action.yml  cppp-repo.json  hooks.json  main.js  mirrorlist.json  package.json  pylint.conf  pyproject.toml  repo.json  repoutils.py  repoutils.spec  requirements-dev.txt  requirements.txt  ruff.toml  workflow.yaml
.github/workflows/: build.yml  lint.yml  pylint.yml  test.yml
.repoutils/: build.yaml  extentions  lint.yaml  mirrorlist.json
.rubisco/: build.yaml  clean.yaml  config.json  lint.yaml  mirrorlist.json  pack-exts.yaml  po.yaml  test.yaml
cppp_repoutils/: __init__.py  __main__.py  cli.py  config.py  constants.py
cppp_repoutils/cli/: output.py  yesno.py
cppp_repoutils/utils/: __init__.py  compress.py  fileutil.py  findapp.py  gitclone.py  ignore_file.py  log.py  mirrorlist.py  nls.py  options.py  output.py  package.py  shell_command.py  stack.py  variable.py  wget.py  yesno.py
dist-tools/: build-gh-action.sh  build.ps1  build.sh  dist.json
extensions/: README.md
extensions/changelog/: .gitignore  pyproject.toml  repo.json
extensions/cppp-srcpkg/: .gitignore  README.md  pyproject.toml  repo.json  requirements.txt  rubisco.json
extensions/git/: requirements.txt  rubisco.json
extensions/rubp-build/: README.md  build_temp_rubp.sh  pyproject.toml  repo.json  ruff.toml
extensions/subpackages/: README.md  hooks.json  pyproject.toml  repo.json  rubisco.json
extensions/subpackages/.rubisco/: build.yaml  pot.yaml
extensions/subpackages/po/: en_US.po  zh_CN.po
extensions/subpackages/subpackages/: __init__.py  config.py  events.py  git.py  package.py  pkglist.py  steps.py
extensions/test/: rubisco.json
extentions/: README.md
extentions/make/: __init__.py
po/: Makefile  en_US.po  zh_CN.po
repoutils/: __init__.py  __main__.py  compress.py  config.py  constants.py  fileutil.py  findapp.py  getexc.py  ignorefile.py  log.py  nls.py  options.py  output.py  package.py  shell_command.py  stack.py  variable.py  yesno.py
repoutils/cli/: input.py  main.py  output.py
repoutils/kernel/: config_file.py  git.py  log_clean.py  mirrorlist.py  project_config.py  sysreq.py  workflow.py
repoutils/lib/: archive.py  command.py  exceptions.py  fileutil.py  git.py  l10n.py  l10n_lang_names.py  load_module.py  log.py  path_glob.py  process.py  speedtest.py  variable.py  version.py  wget.py
repoutils/shared/: extention.py  ktrigger.py
rubisco/: __init__.py  __main__.py  config.py
rubisco/cli/: __init__.py  argparse_generator.py  input.py  main.py  osc9.py  output.py
rubisco/envutils/: env.py  env_db.py  env_type.py  packages.py  pip.py  utils.py
rubisco/kernel/: config_file.py  config_loader.py  ext_name_check.py  git.py  mirrorlist.py  project_config.py  workflow.py
rubisco/lib/: archive.py  command.py  convert.py  exceptions.py  fileutil.py  l10n.py  l10n_lang_names.py  load_module.py  log.py  pathlib.py  process.py  speedtest.py  sqlite_strerror.py  stack.py  tree.py  variable.py  version.py  wget.py
rubisco/ruxr/: __init__.py  pool.py
src/: cppp-compress.cmd  cppp-compress.py  cppp-repoutils.cmd  cppp-repoutils.py
templates/: build.template.json  cppp-repo.template.json  dist.template.json  variable.md
tests/: test.7z  test.include.json  test.json5  test.tar  test.tar.xz  test_module.py
(+161 files in other folders)
