[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"

[project]

name = "rubisco"

version = "0.1.0"

authors = [{ name = "ChenPi11", email = "wushengwuxi-msctinoulk@outlook.com" }]

description = "C+++ Repository Utilities."

readme = "README.md"

license = { file = "LICENSE" }

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp >= 3.5.4",
    "colorama >= 0.3.9",
    "json-five >= 0.5.1",
    "pyyaml >= 5.4.1",
    "py7zr >= 0.16.1",
    "requests >= 2.18.4",
    "rich >= 6.2.0",
    "rich-argparse >= 1.0.0",
]

[project.urls]

"Homepage" = "https://github.com/cppp-project/rubisco"

# Include files
[tool.hatch.build.targets.sdist]

exclude = [".github"]

[project.scripts]

rubisco = "rubisco.cli.main:main"
ru = "rubisco.cli.main:main"
