[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "ChenPi11", email = "wushengwuxi-msctinoulk@outlook.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp >= 3.5.4",
  "beartype >= 0.20.1",
  "colorama >= 0.3.9",
  "json-five >= 0.5.1",
  "py7zr >= 0.16.1",
  "pyyaml >= 5.4.1",
  "requests >= 2.18.4",
  "rich >= 6.2.0",
  "rich-argparse >= 1.0.0",
  "GitPython >= 3.1.20",
  "pytest >= 6.2.4",
  "pygments >= 2.10.0",
  "prompt_toolkit >= 3.0.23",
]
description = "C+++ Repository Utilities."
license = {file = "LICENSE"}
name = "rubisco"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0.post"

[project.urls]
"Homepage" = "https://github.com/cppp-project/rubisco"

# Include files.
[tool.hatch.build.targets.sdist]
exclude = [".github", "action.yml"]

[project.scripts]
ru = "rubisco.cli.main.main:main"
rubisco = "rubisco.cli.main.main:main"

[project.optional-dependencies]
# Don't use `uv add --dev`, use `uv add --optional dev instead`.
dev = [
  "build>=1.2.2.post1",
  "hatchling>=1.27.0",
  "ipython>=9.4.0",
  "nuitka>=2.7.12",
  "pylint>=3.3.7",
  "pyright>=1.1.403",
  "pytest>=8.4.1",
]
ruff = [
  "ruff>=0.12.3",
]
