[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "The C++ Plus Project", email = "cpppteam@email.cn"},
  {name = "ChenPi11", email = "wushengwuxi-msctinoulk@outlook.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "rubisco >= 0.1.0.post",
]
description = "Rubisco subpackage manager."
name = "subpackages"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
"Homepage" = "https://github.com/cppp-project/rubisco"

[project.optional-dependencies]
# Don't use `uv add --dev`, use `uv add --optional dev instead`.
dev = [
  "ipython >= 9.4.0",
  "pylint >= 3.3.7",
  "pyright >= 1.1.403",
  "pytest >= 8.4.1",
]
ruff = [
  "ruff >= 0.12.3",
]
